--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -31,17 +31,17 @@ Seagull =
 # All lines, and this whole mod are definetely originated from bird thing.
 # But these lines are names that i selected and sometimes tweaked for myself as a proper noun.
 
-Aves = 
-Shrike Lanius = 
-Avian = 
+Ornith = 
+Shrike = 
+Ornith = 
 Grand Nest = 
-Osterich = 
-Sanderling = 
-Comorant = 
 Kestrel = 
-Vultuer = 
 Raven = 
 Kingfisher = 
+Comorant = 
+Osterich = 
+Sanderling = 
+Vultuer = 
 Chickadee = 
 Bunting = 
 Wryneck = 
