--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -26,10 +26,7 @@ Seagull =
 
 
 
-# I carefully ask translators to render following lines not based on meaning, but on sound.
-# In other words, please 'transliterate' them.
-# All lines, and this whole mod are definetely originated from bird thing.
-# But these lines are names that i selected and sometimes tweaked for myself as a proper noun.
+# These lines are names that i selected and sometimes tweaked as a proper noun.
 
 Ornith = 
 Shrike = 
