--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -25,23 +25,19 @@ Mallard = 청둥오리
 Seagull = 갈매기
 
 
+# These lines are names that i selected and sometimes tweaked as a proper noun.
 
-# I carefully ask translators to render following lines not based on meaning, but on sound.
-# In other words, please 'transliterate' them.
-# All lines, and this whole mod are definetely originated from bird thing.
-# But these lines are names that i selected and sometimes tweaked for myself as a proper noun.
-
-Aves = 에이브
-Shrike Lanius = 슈라이크 라니우스
-Avian = 에이브의
+Ornith = 오르니스
+Shrike = 슈라이크
+Ornith = 오르니스
 Grand Nest = 그랜드 네스트
-Osterich = 오스테리치
-Sanderling = 샌덜링
-Comorant = 코모런트
 Kestrel = 케스트렐
-Vultuer = 벌쳐
 Raven = 레이븐
 Kingfisher = 킹피셔
+Comorant = 코모런트
+Osterich = 오스테리치
+Sanderling = 샌덜링
+Vultuer = 벌쳐
 Chickadee = 치카디
 Bunting = 번팅
 Wryneck = 뤼넥
