--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -28,7 +28,7 @@ Seagull =
 
 # These lines are names that i selected and sometimes tweaked as a proper noun.
 
-Ornith = 
+Aves = 
 Shrike = 
 Ornith = 
 Grand Nest = 
