--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -27,7 +27,7 @@ Seagull = 갈매기
 
 # These lines are names that i selected and sometimes tweaked as a proper noun.
 
-Ornith = 오르니스
+Aves = 오르니스
 Shrike = 슈라이크
 Ornith = 오르니스
 Grand Nest = 그랜드 네스트
