--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -28,9 +28,9 @@ Seagull =
 
 # These lines are names that i selected and sometimes tweaked as a proper noun.
 
-Aves = 
-Shrike = 
 Ornith = 
+Shrike = 
+Ornithan = 
 Grand Nest = 
 Kestrel = 
 Raven = 
