--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -27,9 +27,9 @@ Seagull = 갈매기
 
 # These lines are names that i selected and sometimes tweaked as a proper noun.
 
-Aves = 오르니스
-Shrike = 슈라이크
 Ornith = 오르니스
+Shrike = 슈라이크
+Ornithan = 오르니스의
 Grand Nest = 그랜드 네스트
 Kestrel = 케스트렐
 Raven = 레이븐
