--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -31,8 +31,8 @@ Ornith = 오르니스
 Shrike = 슈라이크
 Ornithan = 오르니스의
 Grand Nest = 그랜드 네스트
-Kestrel = 케스트렐
-Raven = 레이븐
+Kestrell = 케스트렐
+Reiven = 레이븐
 Kingfisher = 킹피셔
 Comorant = 코모런트
 Osterich = 오스테리치
