--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -32,8 +32,8 @@ Ornith =
 Shrike = 
 Ornithan = 
 Grand Nest = 
-Kestrel = 
-Raven = 
+Kestrell = 
+Reiven = 
 Kingfisher = 
 Comorant = 
 Osterich = 
