--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -2,6 +2,10 @@ Nightjar =
 Horned Owl = 
 Giant Condor = 
 
+Big Mouth = 
+Silence = 
+Hovering = 
+
 Well, How delicious is your MEAT? = 
 I'll skewer you and tear into pieces! = 
 Your people's flesh was savory. Next time I'll have yours at any cost. = 
