--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -2,6 +2,10 @@ Nightjar = 쏙독새
 Horned Owl = 수리부엉이
 Giant Condor = 거대 콘도르
 
+Big Mouth = 큰 입
+Silence = 무음
+Hovering = 활공
+
 Well, How delicious is your MEAT? = 어디, 당신 고기는 얼마나 맛있을까?
 I'll skewer you and tear into pieces! = 창끝에 꿰어달아 찢어발겨주마!
 Your people's flesh was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛있더군. 다음엔 무슨 수를 써서라도 너를 먹어주지.
