edit units.json and etc.

--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -4,17 +4,16 @@ Giant Condor = 거대 콘도르
 
 Big Mouth = 큰 입
 Silence = 무음
-Hovering = 활공
+High-altitude = 고고도
 
-Well, How delicious is your MEAT? = 어디, 당신 고기는 얼마나 맛있을까?
-I'll skewer you and tear into pieces! = 창끝에 꿰어달아 찢어발겨주마!
-Your people's flesh was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛있더군. 다음엔 무슨 수를 써서라도 너를 먹어주지.
+Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
+I'll skewer you and tear into pieces! = 창끝에 꿰어 찢어발겨 주마!
+Your people's meat was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛나더군. 다음엔 무슨 수를 써서라도 너를 먹어주지.
 
 # 'Shrike' here means a bird, of the family Laniidae.
 Welcome. I'm 'Shrike', just a small innocent gourmet. = 반가워요. 저는 그냥 작고 순진한 미식가 때까치입니다.
 
 Have you eaten? = 식사는 하셨나요?
-What, prey? = 뭐냐, 먹잇감아?
 You want some? I hope you like it. = 좀 드릴까요? 입맛에 맞으면 좋겠네요.
 Sky Burial = 조장
 Crow = 까마귀
