--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -4,17 +4,16 @@ Giant Condor =
 
 Big Mouth = 
 Silence = 
-Hovering = 
+High-altitude = 
 
-Well, How delicious is your MEAT? = 
+Well, what does your FLESH taste like? = 
 I'll skewer you and tear into pieces! = 
-Your people's flesh was savory. Next time I'll have yours at any cost. = 
+Your people's meat was savory. Next time I'll have yours at any cost. = 
 
 # 'Shrike' here means a bird, of the family Laniidae.
 Welcome. I'm 'Shrike', just a small innocent gourmet. = 
 
 Have you eaten? = 
-What, prey? = 
 You want some? I hope you like it. = 
 Sky Burial = 
 Crow = 
