--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -4,7 +4,7 @@ Giant Condor = 거대 콘도르
 
 Big Mouth = 큰 입
 Silence = 무음
-High-altitude = 고고도
+Endurance Flight = 체공비행
 
 Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
 I'll skewer you and tear into pieces! = 창끝에 꿰어 찢어발겨 주마!
