--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -4,7 +4,7 @@ Giant Condor =
 
 Big Mouth = 
 Silence = 
-High-altitude = 
+Endurance Flight = 
 
 Well, what does your FLESH taste like? = 
 I'll skewer you and tear into pieces! = 
