--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,10 +1,13 @@
 Nightjar = 쏙독새
 Horned Owl = 수리부엉이
 Giant Condor = 거대 콘도르
+Nest = 둥지
+Iron Nest = 강철 둥지
+Hover Nest = 공중 둥지
 
-Big Mouth = 큰 입
-Silence = 무음
-Endurance Flight = 체공비행
+Feathers = 깃털
+Claws = 발톱
+Thorns = 가시
 
 Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
 I'll skewer you and tear into pieces! = 창끝에 꿰어 찢어발겨 주마!
