--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -1,10 +1,13 @@
 Nightjar = 
 Horned Owl = 
 Giant Condor = 
+Nest = 
+Iron Nest = 
+Hover Nest = 
 
-Big Mouth = 
-Silence = 
-Endurance Flight = 
+Feathers = 
+Claws = 
+Thorns = 
 
 Well, what does your FLESH taste like? = 
 I'll skewer you and tear into pieces! = 
