--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,19 +1,18 @@
 Nightjar = 쏙독새
-Horned Owl = 수리부엉이
-Giant Condor = 거대 콘도르
+Owl = 부엉이
+Condor = 콘도르
+Twigs = 잔가지
 Nest = 둥지
-Iron Nest = 강철 둥지
-Hover Nest = 공중 둥지
+Hover = 호버
 
 Feathers = 깃털
-Claws = 발톱
-Thorns = 가시
+Hunt = 사냥
 
 Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
 I'll skewer you and tear into pieces! = 창끝에 꿰어 찢어발겨 주마!
-Your people's meat was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛나더군. 다음엔 무슨 수를 써서라도 너를 먹어주지.
+Your people's meat was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛나더군. 다음엔 무슨 수를 써서라도 네놈을 먹어주지.
 
-# 'Shrike' here means a bird, of the family Laniidae.
+# 'Shrike' here intended a bird, of the family Laniidae.
 Welcome. I'm 'Shrike', just a small innocent gourmet. = 반가워요. 저는 그냥 작고 순진한 미식가 때까치입니다.
 
 Have you eaten? = 식사는 하셨나요?
@@ -29,6 +28,7 @@ Woodpecker = 딱따구리
 Dove = 비둘기
 Mallard = 청둥오리
 Seagull = 갈매기
+
 
 
 # These lines are names that i selected and sometimes tweaked as a proper noun.
