--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -2,18 +2,17 @@ Nightjar =
 Horned Owl = 
 Giant Condor = 
 Nest = 
-Iron Nest = 
-Hover Nest = 
+Thorns = 
+Hover = 
 
 Feathers = 
 Claws = 
-Thorns = 
 
 Well, what does your FLESH taste like? = 
 I'll skewer you and tear into pieces! = 
 Your people's meat was savory. Next time I'll have yours at any cost. = 
 
-# 'Shrike' here means a bird, of the family Laniidae.
+# 'Shrike' here intended a bird, of the family Laniidae.
 Welcome. I'm 'Shrike', just a small innocent gourmet. = 
 
 Have you eaten? = 
