--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -6,11 +6,12 @@ Nest = 둥지
 Hover = 호버
 
 Feathers = 깃털
-Hunt = 사냥
+Hunts = 사냥
+Nests = 둥지
 
 Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
 I'll skewer you and tear into pieces! = 창끝에 꿰어 찢어발겨 주마!
-Your people's meat was savory. Next time I'll have yours at any cost. = 너희 백성들의 살점은 맛나더군. 다음엔 무슨 수를 써서라도 네놈을 먹어주지.
+Your people's meat was savory. Next time I'll have yours at any cost. = 늬 백성들의 살점은 맛나더군. 다음엔 무슨 수를 써서라도 네놈을 먹어주지.
 
 # 'Shrike' here intended a bird, of the family Laniidae.
 Welcome. I'm 'Shrike', just a small innocent gourmet. = 반가워요. 저는 그냥 작고 순진한 미식가 때까치입니다.
