--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -6,7 +6,8 @@ Thorns =
 Hover = 
 
 Feathers = 
-Claws = 
+Hunts = 
+Nests = 
 
 Well, what does your FLESH taste like? = 
 I'll skewer you and tear into pieces! = 
