--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,12 +1,12 @@
 Nightjar = 쏙독새
 Owl = 부엉이
 Condor = 콘도르
-Twigs = 잔가지
+Bush = 덤불
 Nest = 둥지
 Hover = 호버
 
 Feathers = 깃털
-Hunts = 사냥
+Claws = 발톱
 Nests = 둥지
 
 Well, what does your FLESH taste like? = 그래, 당신 살점은 어떤 맛일까?
