--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -1,12 +1,12 @@
 Nightjar = 
-Horned Owl = 
-Giant Condor = 
+Owl = 
+Condor = 
+Bush = 
 Nest = 
-Thorns = 
 Hover = 
 
 Feathers = 
-Hunts = 
+Claws = 
 Nests = 
 
 Well, what does your FLESH taste like? = 
