--- a/jsons/translations/template.properties
+++ b/jsons/translations/template.properties
@@ -18,7 +18,7 @@ Welcome. I'm 'Shrike', just a small innocent gourmet. =
 
 Have you eaten? = 
 You want some? I hope you like it. = 
-Sky Burial = 
+Bird Sanctuary = 
 Crow = 
 Sparrow = 
 Swallow = 
