--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -18,7 +18,7 @@ Welcome. I'm 'Shrike', just a small innocent gourmet. = 반가워요. 저는 그
 
 Have you eaten? = 식사는 하셨나요?
 You want some? I hope you like it. = 좀 드릴까요? 입맛에 맞으면 좋겠네요.
-Sky Burial = 조장
+Bird Sanctuary = 철새도래지
 Crow = 까마귀
 Sparrow = 참새
 Swallow = 제비
